x/programs/rust/sdk_macros/tests/ui/wild.rs
use sdk_macros::public;

struct Program;

#[public]
pub fn test(_: Program, _: usize) {}

fn main() {}
